OO-3832: merge status for life indexer and full indexer
Merge the data and status of the life and the full indexers in the web
service and the proc.xml